# KubeMLOps

./: .env  README.md  build  delete-pods  devbox.json  generate-secret  iris_s3_pipeline.yaml  iris_s3_pipeline.yml  kfp_client_manager.py  kubeflow-try.ipynb  pyproject.toml
components/cleaning/: build  component.yml
components/cleaning/src/: comp.py
components/download/: build  component.yml
components/download/src/: comp.py
components/persist/: build  component.yml
components/persist/src/: comp.py
components/predict/: Dockerfile  build  component.yml
components/predict/src/: comp.py
components/train/: build  component.yml
components/train/src/: comp.py
terraform/providers/ionos-cloud/: terraform.tfstate  terraform.tfstate.backup  tfplan
