[tool.poetry]
description = "ML from development to deployment"
authors = ["Sajad Safarveisi"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
requests = "^2.32.3"
kfp = {extras = ["kubernetes"], version = "^2.11.0"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"
black = {extras = ["jupyter"], version = "^24.10.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
